// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuyButton /> should match snapshot loading 1`] = `
<div
  class="content-loader-mock"
/>
`;

exports[`<BuyButton /> should match snapshot normal 1`] = `
<button
  type="button"
>
    Test  
</button>
`;

exports[`<BuyButton /> should match snapshot unavailable 1`] = `
<button
  type="button"
>
   
  <span>
    Unavailable
  </span>
   
</button>
`;
